Performed lots and lots of changes and refactorings in order to get rid of deprecations, compiler warnings and better utilization of the JSE 5 API. The unit tests have been double checked. JSE 5 applications which did not use any deprecations should be able to use this new version without recompiling.